--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for("meso.dashboard") }}">
+                                <i class="bi bi-globe"></i> 中观观察
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for("admin.db_diagnose_page") }}">
                                 <i class="bi bi-hdd-network"></i> 数据库管理
                             </a>
